# coursework

./: .env.example  .gitignore  README.md  config.py  pyproject.toml
src/: main.py  reports.py  services.py  utils.py  vievs.py  views.py
tests/: conftest.py  test_excel_file_reader.py  test_exchange_currency.py  test_expenses.py  test_filter_transactions.py  test_get_date.py  test_get_operations.py  test_main.py  test_read_json_from_file.py  test_reports.py  test_services.py  test_stocks_prices.py  test_top_transaction.py
