[project]
name = "course-work"
version = "0.1.0"
description = ""
authors = [
    {name = "Denis Gabdrakhmanov",email = "rubik5000@ya.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.16.1"
black = "^25.1.0"
isort = "^6.0.1"

[flake8]
max-line-length = 119
ignore = '''E203, W503'''
exclude = '''.git, __pycache__, venv, .venv'''

[tool.isort]
line_length = 119

[tool.black]
line-length = 119
exclude = '''
(
  /(
    | \.git          # в корне проекта
)
'''

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'